--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -21,7 +21,7 @@
     "rollup-plugin-typescript2": "^0.25.2",
     "ts-nameof": "^4.1.0",
     "ttypescript": "^1.5.8",
-    "typescript": "^3.7.2"
+    "typescript": "3.8.0-dev.20200107"
   },
   "publishConfig": {
     "access": "public"
