--- a/packages/ts-morph/package.json
+++ b/packages/ts-morph/package.json
@@ -90,7 +90,7 @@
     "ts-nameof": "^4.1.0",
     "ts-node": "8.4.1",
     "ttypescript": "1.5.8",
-    "typescript": "3.7.2"
+    "typescript": "3.8.0-dev.20200107"
   },
   "standard-version": {
     "tagPrefix": "",
